--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bootable-environment",
-  "version": "0.3.0",
+  "name": "@viadeo-fcms/bootable-environment",
+  "version": "0.4.0",
   "description": "Environment initialization phase for Bootable.",
   "keywords": [
     "boot",
