--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@viadeo-fcms/bootable-environment",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Environment initialization phase for Bootable.",
+  "homepage": "https://github.com/viadeo/bootable-environment",
   "keywords": [
     "boot",
     "init",
@@ -27,15 +28,15 @@
   ],
   "main": "./lib",
   "dependencies": {
-    "scripts": "0.1.x",
-    "debug": "0.7.x"
+    "scripts": "0.1.0",
+    "debug": "3.1.0"
   },
   "devDependencies": {
-    "mocha": "1.x.x",
-    "chai": "1.x.x"
+    "mocha": "2.3.4",
+    "chai": "3.5.0"
   },
   "engines": {
-    "node": ">= 0.4.0"
+    "node": "8.9.4"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec --require test/bootstrap/node test/*.test.js"
